HTML 和 CSS 初步完成

--- a/src/assets/styles/reset.scss
+++ b/src/assets/styles/reset.scss
@@ -10,3 +10,10 @@ a{
   text-decoration: none;
   color: inherit;
 }
+button, input{
+  font: inherit;
+}
+//表示去除边框元素颜色
+:focus{
+  outline: none;
+}
